Fixing yellow block overlap in subCol

--- a/guides/assets/stylesrc/_main.scss
+++ b/guides/assets/stylesrc/_main.scss
@@ -78,6 +78,10 @@ body.guide {
     }
   }
 
+  .interstitial {
+    min-width: unset;
+  }
+
   // Links
 
   a {
@@ -343,7 +347,6 @@ body.guide {
     :where(body[dir="rtl"]) & { text-align: right; }
 
     @include media('>desktop') {
-      width: 60vw;
       max-width: calc(55rem + 400px);
       margin: 0 auto;
       padding-right: 400px;
